# terminal-typer

./: Cargo.toml  README.md
src/: app.rs  main.rs  types.rs  views.rs
src/reader/: file.rs  reader.rs
src/types/: line.rs  typing.rs
