[package]
name = "terminal-typer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm
[dependencies]
anyhow ="1.0"
clap = {version = "3.1.18", features =["derive"]}
crossterm = "0.23"
encoding = "0.2"
ignore = "0.4"
rand = "0.8.5"
syntect = "4.6"
tui = "0.18"
